Added file operation

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 chapter_4/start
 chapter_4/hdb
+chapter_4/file/trades.zip
+chapter_4/file/plumber
 chapter_5/certs/*pem
 chapter_6/202*.log
 chapter_6/hdb/sym
